--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nodemon": "^3.0.3",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "sweetalert2": "^11.10.5"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
